Update:correct anchor tags in products.html and align navigation bar to the left to about and contact pages

--- a/about.css
+++ b/about.css
@@ -35,7 +35,7 @@ nav ul {
     display:flex;
     gap:20px;
     list-style:none;
-    
+    margin-left: auto;
 }
 nav ul a{
     font-family: Arial, Helvetica, sans-serif;
