--- a/contact.css
+++ b/contact.css
@@ -35,6 +35,7 @@ nav ul {
     display:flex;
     gap:20px;
     list-style:none;
+   margin-left: auto;
     
 }
 nav ul a{
